# protto-rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.github/workflows/: nix-check.yml
grpc-example/: Cargo.toml  build.rs
grpc-example/proptest-regressions/: edge_case_tests.txt  error_tests.txt  integration_tests.txt  types.txt
grpc-example/proto/: service.proto
grpc-example/src/: basic_tests.rs  basic_types.rs  complex_types.rs  default_types.rs  edge_case_tests.rs  error_types.rs  integration_tests.rs  lib.rs  shared_types.rs  types.rs
nix-config/: env-vars.nix  shell-aliases.nix  shell-hook.nix  starship.toml
proto_convert/: Cargo.toml
proto_convert/examples/grpc-comprehensive/: Cargo.toml  build.rs
proto_convert/examples/grpc-comprehensive/src/: basic_types.rs  default_tests.rs  default_types.rs  error_tests.rs  error_types.rs  integration_tests.rs  lib.rs  shared_types.rs
proto_convert/src/: lib.rs
proto_convert_build/: Cargo.toml
proto_convert_build/src/: lib.rs
proto_convert_derive/: Cargo.toml  README.md
proto_convert_derive/src/: attribute_parser.rs  conversion.rs  debug.rs  enum_processor.rs  error_analysis.rs  error_codegen.rs  error_handler.rs  error_types.rs  expect_analysis.rs  field_analysis.rs  field_info.rs  field_processor.rs  lib.rs  macro_input.rs  optionality.rs  proto_inspection.rs  struct_impl.rs  tuple_impl.rs  type_analysis.rs
proto_convert_derive/src/field_analysis/: mod.rs  proto_inspection.rs
protto/: Cargo.toml
protto/src/: lib.rs
protto_derive/: Cargo.toml
protto_derive/src/: attribute_parser.rs  compatibility_testing.rs  conversion.rs  conversion_codegen.rs  conversion_strategy.rs  debug.rs  enum_generator.rs  error_codegen.rs  error_handler.rs  error_mode.rs  error_types.rs  expect_analysis.rs  field_analysis.rs  field_conversion.rs  field_info.rs  field_processor.rs  lib.rs  macro_input.rs  migration_tests.rs  optionality.rs  struct_generator.rs  struct_impl.rs  tuple_generator.rs  tuple_impl.rs  type_analysis.rs
protto_derive/src/analysis/: attribute_parser.rs  error_analysis.rs  expect_analysis.rs  field_analysis.rs  macro_input.rs  mod.rs  optionality.rs  type_analysis.rs
protto_derive/src/conversion/: custom_strategy.rs  mod.rs
protto_derive/src/error/: mod.rs  mode.rs
protto_derive/src/field/: codegen.rs  context.rs  conversion_codegen.rs  conversion_strategy.rs  custom_conversion.rs  error_mode.rs  field_codegen.rs  field_generator.rs  field_processor.rs  info.rs  mod.rs
protto_derive/src/migration/: compatibility.rs  core.rs  migration_tests.rs  mod.rs
scripts/: migration_test.sh
src/: lib.rs
tests/integration/: Cargo.toml  build.rs
tests/integration/proptest-regressions/: advanced_tests.txt  boundary_property_tests.txt  default_tests.txt  edge_case_tests.txt  error_tests.txt  integration_tests.txt
tests/integration/proto/: service.proto
tests/integration/src/: additional_edge_case_tests.rs  advanced_tests.rs  attribute_parser_tests.rs  basic_tests.rs  basic_types.rs  boolean_boundary_tests.rs  boundary_property_tests.rs  code_generation_edge_tests.rs  combined_bug_tests.rs  complex_types.rs  default_types.rs  edge_case_tests.rs  enum_prefix_tests.rs  error_tests.rs  error_types.rs  integration_tests.rs  lib.rs  required_field_tests.rs  shared_types.rs  strategy_selection_tests.rs  type_inference_edge_tests.rs
