[workspace]
members = [
    "protto",
    "protto_derive",
    "tests/integration",
]

resolver = "2"

[workspace.package]
version = "0.6.1"
edition = "2024"
authors = ["Damon Rolfs <drolfs@gmail.com>"]
repository = "https://github.com/dmrolfs/protto-rs"
license = "Apache-2.0"

[workspace.dependencies]
# internal crates
protto = { version = "0.6.1", path = "protto" }
protto_derive = { version = "0.6.1", path = "protto_derive" }

# external crate
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
tonic = "0.12"
prost = "0.13"
proptest = "1.0"
proptest-derive = "0.5"
ctor = "0.2"
tonic-build = "0.12"
glob = "0.3"
