[package]
name = "grpc-example"
version = "0.1.0"
edition = "2021"
publish.workspace = true

[dependencies]
proto_convert_derive = { path = "../proto_convert_derive" }
tonic = "*"
prost = "0.13"

[build-dependencies]
tonic-build = "*"
glob = "0.3.2"

[dev-dependencies]
proptest = "1"
proptest-derive = "0.5.1"
