[package]
name = "proto_convert"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Automatically derive Protobuf and Rust conversions"
repository.workspace = true
license.workspace = true
keywords = ["protobuf", "protocol", "derive", "macro", "conversion"]
categories = ["development-tools", "encoding"]
documentation = "https://docs.rs/proto_convert"

[dependencies]
proto_convert_derive = { workspace = true }
proto_convert_build = { workspace = true, optional = true }

[features]
default = []

# Feature to enable build script helpers
build = ["dep:proto_convert_build"]

# Metadata integration features (mutually exclusive)
meta-env = ["build", "proto_convert_build?/meta-env"]
meta-file = ["build", "proto_convert_build?/meta-file"]