[package]
name = "proto_convert_derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Automatically derive Protobuf and Rust conversions."
repository.workspace = true
license.workspace = true
documentation = "https://docs.rs/proto_convert_derive"
keywords = ["protobuf", "protocol", "derive"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[features]
default = []