[package]
name = "protto"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Automatically derive Protobuf and Rust conversions"
repository.workspace = true
license.workspace = true
keywords = ["protobuf", "protocol", "derive", "macro", "conversion"]
categories = ["development-tools", "encoding"]
documentation = "https://docs.rs/protto"

[dependencies]
protto_derive = { workspace = true }

[features]
default = []
