[package]
name = "proto_convert_integration_tests"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
proto_convert = { path = "../../proto_convert" }
tonic = { workspace = true }
prost = { workspace = true }

# test dependencies
proptest = { workspace = true }
proptest-derive = { workspace = true }
ctor = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
glob = { workspace = true }

[features]
default = []
